--- a/philosophy.html
+++ b/philosophy.html
@@ -134,7 +134,7 @@
 
         <section class='phil-image-grid'>
           <img class='phil-img' src='assets/images/portrait1.jpeg' />
-          <img class='phil-img' src='assets/images/portrait2.jpeg' />
+          <img class='phil-img' src='assets/images/portrait2.jpg' />
           <img class='phil-img' src='assets/images/portrait3.jpeg' />
           <img class='phil-img' src='assets/images/portrait4.jpeg' />
         </section>
@@ -246,10 +246,10 @@
           <img class='phil-img' src='assets/images/book2.jpeg' />
           <img class='phil-img' src='assets/images/book3.jpeg' />
           <img class='phil-img' src='assets/images/book4.jpeg' />
-          <img class='phil-img' src='assets/images/book5.jpeg' />
-          <img class='phil-img' src='assets/images/book6.jpeg' />
-          <img class='phil-img' src='assets/images/book7.jpeg' />
-          <img class='phil-img' src='assets/images/book8.jpeg' />
+          <img class='phil-img' src='assets/images/book5.jpg' />
+          <img class='phil-img' src='assets/images/book6.jpg' />
+          <img class='phil-img' src='assets/images/book7.jpg' />
+          <img class='phil-img' src='assets/images/book8.jpg' />
         </ul>
 
         <div class='phil-video-section'>
