make emma changes part 1

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
             </section>
 
             <section class='contact-section'>
-              <span><strong>The Michael Chekhov Acting Studio</strong></span>
+              <span><strong>Michael Chekhov Acting Studio</strong></span>
               <span>138 W 15th St, 1st floor</span>
               <span>New York, New York 10011</span>
             </section>
