--- a/lenard.html
+++ b/lenard.html
@@ -42,7 +42,7 @@
             He is a founding member of the Michael Chekhov Association,
             MICHA, and the Director of the Michael Chekhov Acting Studio
             in New York City since it’s inception in 1996. Author of the
-            Michael Chekhov Handbook, for the Actor, he has been working
+            <em>Michael Chekhov Handbook, for the Actor</em>, he has been working
             in the theater for forty years collaborating with other
             artists to create original works for the stage, cinema, and
             television. He has directed plays and performance pieces on
