--- a/philosophy.html
+++ b/philosophy.html
@@ -253,7 +253,7 @@
         </ul>
 
         <div class='phil-video-section'>
-          <iframe class='phil-video' src="https://player.vimeo.com/video/19313780" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <iframe class='phil-video' height='100%' width='100%' src="https://player.vimeo.com/video/19313780" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           <div class='phil-video-attribution'>
             <a href="https://vimeo.com/ondemand/michamasterclasses"><img class='phil-video-attribution-image' src='assets/images/micha.jpg' /></a>
             <div class='phil-video-description'>
