--- a/studio.html
+++ b/studio.html
@@ -46,9 +46,9 @@
             in a practical and imaginative way, clearly translating the technique
             into something easy to use for actors today. His approach is
             experienced in his teaching and expressed in his writing. <em>The
-            Michael Chekhov Handbook</em>, for the Actor can be purchased
+            Michael Chekhov Handbook, for the Actor</em> can be purchased
             <a class='studio-link' href='http://www.dramabookshop.com/book/9780415496728'>here</a>.
-            Additionally a few <a class='studio-link' href=''>articles</a>
+            Additionally a few <a class='studio-link' target='_blank' href='assets/articles.pdf'>articles</a>
             by Lenard are included here for you–gratis!
           </div>
         </section>
@@ -56,7 +56,7 @@
         <nav class='studio-page-nav'>
           <li class='page-nav-item'>
             <a href='lenard.html'>
-            <label>LENARD PETIT</label>
+            <label>LENARD</label>
             <img src='assets/images/lenard.jpeg' />
             </a>
           </li>
