make emma changes part 2

--- a/friends.html
+++ b/friends.html
@@ -37,8 +37,7 @@
       <div class='page-body'>
         <h2 class='page-title'>FRIENDS</h2>
         <div class='map-text'>
-          Reach out to and follow our network of friends around the world
-          working with the Michael Chekhov Technique!
+          Reach out to and follow our network of friends around the world!
         </div>
         <div className='map-container'>
           <div id='map'></div>
