--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Chekhov Acting Studio</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:300" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
   </head>
   <body>
@@ -39,12 +40,13 @@
       </div>
       <div class='page-body'>
         <div class='home-quote'>
-          "When you meet the Chekhov Technique, you meet your own creative
-          and expressive Self."
+          <em>"When you meet the Chekhov Technique, you meet your own creative
+          and expressive Self."</em>
           <span class='home-quote-source'>
             - Lenard Petit, Artistic Director
           </span>
         </div>
+        <img class='home-image' src='assets/images/touch.jpg' />
       </div>
     </div>
     <footer>
