--- a/philosophy.html
+++ b/philosophy.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:100" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
   </head>
   <body>
@@ -229,7 +230,7 @@
         </section>
 
         <section class='page-section'>
-          <h3 class='section-header'>SUGGESTED READING</h3>
+          <h3 class='section-header'>SUGGESTED READING AND MEDIA</h3>
           <p>
             These books are carried by and can be ordered through our neighbors
             at the
