standardize white space above home quote

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </nav>
     </header>
 
-    <div id="primary" class="content-area">
+    <div id="primary" >
       <img class='home-banner' src='assets/images/homebanner.jpg'/>
       <div class='title'>
         <span class='title-name'>Michael Chekhov</span>
