update script for new AOTA image standalone

--- a/programs.html
+++ b/programs.html
@@ -35,7 +35,10 @@
       <div class='page-body'>
         <div class='page-title'>PROGRAMS</div>
         <div class='programs-container'>
-          <img class='art-of-the-actor' src='assets/images/aota-test.jpg'></img>
+          <li class='program-card program-card-full-width'>
+            <div class='program-card-title program-card-hidden'>ART OF THE ACTOR</div>
+            <img class='art-of-the-actor' src='assets/images/aota-test.jpg'></img>
+          </li>
           <div class='programs-grid'>
             <li class='program-card gold'>
               <div class='program-card-title'>WORKSHOPS</div>
