update yolan bio

--- a/faculty.html
+++ b/faculty.html
@@ -180,26 +180,26 @@
             <h3 class='faculty-name'>
               NATALIE YOLAN
             </h3>
-            <img class='faculty-img' src='assets/images/yalon.jpeg' />
-            Artistic director of MIchael Chekhov Studio Brussels. Natalie
-            specialises in stage production and Russian theatrical pedagogics
-            in Russia: in Moscow’s Gitis (the Russian Academy of Theatre Arts)
-            and the Vakhtanghov Institute; her teachers are Vladimir Skoritz,
-            Andrei Droznin, Boris Rabey, Slava Kokorin.  She is also following
-            an intensive training programme at the Michael Chekhov Acting
-            Studio in New York with Lenard Petit. Since 2003, she has given
-            many courses in Italy, Belgium, France and the United States.
-            She teaches at the Conservatoire de Liège and at the Conservatoire
-            de Roubaix, France, at the Samovar in Paris and at the Michael
-            Chekhov Acting Studio in New York.  She also works as a consultant
-            for the City of Brussels for the ‘Dispositif d’Accrochage Scolaire’.
-            She stages the authors Victor Haïm, Jean-Claude Grumberg, Joël
-            Pommerat, Daniil Kharms and Anton Tchekhov. She has collaborated
-            with film director Boris Lehman, and film directors and performance
-            artists Vincent Matijn-Wallecan, Patricia Martin, Marc Rossignol,
-            Dominique Thirion, Angel Vergara, Melanie Rullier, Anne-Cécile
-            Vandalem, Alain Wathieu Boris Rabey, Matthias Langhoff, Isabelle
-            Pousseur, Slava Kokorin.
+            <img class='faculty-img' src='assets/images/yolan.jpeg' />
+            Artistic director of Michael Chekhov Studio Brussels, Natalie
+            specializes in stage production and Russian theatrical pedagogies
+            from Moscow’s Gitis (the Russian Academy of Theatre Arts) and
+            the Vakhtanghov Institute; her teachers are Vladimir Skoritz,
+            Andrei Droznin, Boris Rabey, and Slava Kokorin. She has also
+            followed an intensive training program at the Michael Chekhov
+            Acting Studio in New York with Lenard Petit. Since 2003, she
+            has given many courses in Italy, Belgium, France and the United
+            States. She teaches at the Conservatoire de Liège and at the
+            Conservatoire de Roubaix, France, at the Samovar in Paris and
+            at the Michael Chekhov Acting Studio in New York. She also works
+            as a consultant for the City of Brussels for the ‘Dispositif
+            d’Accrochage Scolaire’. She stages the authors Victor Haïm,
+            Jean-Claude Grumberg, Joël Pommerat, Daniil Kharms and Anton
+            Tchekhov. She has collaborated with film director Boris Lehman,
+            and film directors and performance artists Vincent Matijn-Wallecan,
+            Patricia Martin, Marc Rossignol, Dominique Thirion, Angel Vergara,
+            Melanie Rullier, Anne-Cécile Vandalem, Alain Wathieu Boris Rabey,
+            Matthias Langhoff, Isabelle Pousseur, Slava Kokorin.
           </div>
         </section>
 
