--- a/programs-old.html
+++ b/programs-old.html
@@ -16,7 +16,7 @@
     		<img class='logo' src='http://res.cloudinary.com/dn07p1frq/image/upload/c_scale,w_100/v1507927305/expansiveman_eqo6gt.png' />
     	</a>
       <nav class='menu'>
-        <group class='submenu-link'>
+        <group class='submenu-link' onclick="void(0)">
           <a class='menu-item'>Studio</a>
           <nav class='submenu'>
             <a class='submenu-item' href='studio.html'>Welcome</a>
