update melania's bio

--- a/faculty.html
+++ b/faculty.html
@@ -75,11 +75,19 @@
               MELANIA  LEVISTKY
             </h3>
             <img class='faculty-img' src='assets/images/levitsky.jpeg' />
-            New York based director, actor, and teacher. She is the artistic
-            director of NikitaBee productions, and the associate artistic
-            director of Walking the Dog Theater company. Trained in the Michael
-            Chekhov Technique and in Spacial Dynamics. She has taught in
-            the US, Europe, and South Africa.
+            Melania Levitsky is the Artistic Director of Nikita Productions, 
+            and the Associate Artistic Director of Walking the dog Theater Company 
+            Inc. She directs the Shakespeare in the Valley Festival every summer 
+            in upstate NY. She trained in the Michael Chekhov acting technique with 
+            Ted Pugh and Fern Sloan and was a member of The Actors’ Ensemble for 20 
+            years, and is one of the founding members of the Tennessee Shakespeare Company. 
+            She is certified in Level 1 Spacial Dynamics and Bothmer Gymnastics and is 
+            trained in the Werbeck singing technique.  She has taught in the U.S., 
+            The Netherlands and South Africa. She is currently completing a recording 
+            of original songs with a partner in Amsterdam, a children’s book based on a 
+            Kazakh folk tale called, The Gold in the Ground, and recently began creating 
+            custom sculpture portraits.  She believes all art forms are a melding of truth, 
+            fantasy, movement, danger and love.
           </div>
           <div class='faculty-card'>
             <h3 class='faculty-name'>
